# mkid

./: .peas.toml  AGENTS.md  Cargo.toml  Justfile  README.md
.claude/: settings.json
.github/workflows/: release.yml
.peas/: .undo  peas-1kdrt--implement-uuid-v1-and-v6-generation.md  peas-5gucq--implement-uuid-v4-and-v7-generation.md  peas-62sm9--implement-uuid-v8-generation.md  peas-6ve7r--project-setup-dependencies.md  peas-7etro--manual-testing-verification.md  peas-7stdk--implement-uuid-v3-and-v5-generation.md  peas-a1m9z--main-application-logic.md  peas-d1w2n--update-cargo-toml-dependencies.md  peas-ft45d--testing-validation.md  peas-gowc6--setup-ci-cd-pipeline.md  peas-hgeuh--define-base-cli-structure.md  peas-mbdfl--output-formatting-clipboard.md  peas-nyjm6--mkid-v1-0-uuid-generator-cli.md  peas-ooltt--integration-tests-for-cli.md  peas-pqr6w--cli-argument-parsing.md  peas-rdysg--code-cleanup-linting.md  peas-rrceb--implement-default-v7-behavior.md  peas-rwyxg--add-version-specific-parameters.md  peas-s313m--implement-uuid-formatting.md  peas-s49l2--update-readme-md.md  peas-stu2k--define-uuid-subcommand-arguments.md  peas-toidd--uuid-generation-logic.md  peas-xb8pe--implement-clipboard-integration.md  peas-y3v0h--create-module-structure.md  peas-yotnw--documentation-polish.md  peas-z1z4u--implement-main-logic-flow.md
.peas/memory/: cicd-pipeline.md  clap-positional-version.md  copypasta-error-handling.md  module-structure.md  uuid-v7-default.md
src/: cli.rs  generator.rs  main.rs  mkid4.rs  mkid7.rs  output.rs
tests/: integration_test.rs
