[package]
name = "mkid"
version = "0.1.0"
edition = "2024"
authors = ["Christoph Grabo <chris@christophgrabo.com>"]
description = "A tiny CLI tool to generate unique IDs (UUIDs v1-v8)"
repository = "https://github.com/asaaki/mkid"
license = "MIT OR Apache-2.0"
keywords = ["uuid", "cli", "generator", "id"]
categories = ["command-line-utilities"]
readme = "README.md"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[profile.release]
lto = true
strip = true

[dependencies]
clap = { version = "4.5.56", features = ["derive", "env"] }
uuid = { version = "1.20", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8"] }
copypasta = "0.10"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
uuid = "1.20"
